# ch-ir-retrieval

./: .gitignore  Makefile.am  Makefile.in  README.md  ch-ir-common.c  ch-ir-common.h  ch-ir-dir-parser.c  ch-ir-dir-parser.h  ch-ir-indexer-pvt.c  ch-ir-indexer-pvt.h  ch-ir-indexer-stopwords.c  ch-ir-indexer-stopwords.h  ch-ir-indexer-weights.c  ch-ir-indexer-weights.h  ch-ir-indexer.c  ch-ir-indexer.h  ch-ir-query-analyzer.c  ch-ir-query-analyzer.h  ch-ir-query-parser.c  ch-ir-query-parser.h  ch-ir-retrieval-main.c  ch-ir-tokenizer.c  ch-ir-tokenizer.h  configure  configure.ac  porter.h
win/win32/ch-ir-retrieval/: ch-ir-retrieval.sln
win/win32/ch-ir-retrieval/ch-ir-retrieval/: ch-ir-retrieval.vcxproj
