SUBDIRS = .
bin_PROGRAMS = ch-ir-retrieval
ch_ir_retrieval_SOURCES = ch-ir-retrieval-main.c \
								ch-ir-common.c ch-ir-common.h \
								ch-ir-indexer.c ch-ir-indexer.h \
								ch-ir-indexer-pvt.c ch-ir-indexer-pvt.h \
								ch-ir-tokenizer.c ch-ir-tokenizer.h \
								ch-ir-dir-parser.c ch-ir-dir-parser.h \
								ch-ir-query-parser.c ch-ir-query-parser.h \
								ch-ir-query-analyzer.c ch-ir-query-analyzer.h \
								ch-ir-indexer-stopwords.c ch-ir-indexer-stopwords.h \
								ch-ir-indexer-weights.c ch-ir-indexer-weights.h \
								porter.c porter.h
ACLOCAL_AMFLAGS = -I m4
